cabal-version:       2.2

name:                direct-sqlite-conduit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/direct-sqlite-conduit
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Marco Zocca
category:            Acme
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Database.SQLite3.Conduit
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , containers >= 0.6.7
                     , direct-sqlite
                     , resourcet
                     , text
  ghc-options:         -Wall
                       -Wcompat

-- executable direct-sqlite-conduit
--   default-language:    Haskell2010
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , direct-sqlite-conduit
--   ghc-options:         -Wall
--                        -Wcompat
--                        -Widentities
--                        -Wincomplete-record-updates
--                        -Wincomplete-uni-patterns
--                        -Wmissing-export-lists
--                        -Wmissing-home-modules
--                        -Wpartial-fields
--                        -Wredundant-constraints
--                        -threaded
--                        -rtsopts
--                        -with-rtsopts=-N

test-suite spec
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       LibSpec
  build-depends:       base
                     , direct-sqlite-conduit
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/direct-sqlite-conduit
